--- a/expenses_tracker/expenses_tracker_app/templates/expenses_tracker_app/about.html
+++ b/expenses_tracker/expenses_tracker_app/templates/expenses_tracker_app/about.html
@@ -1,10 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends 'expenses_tracker_app/base.html' %}
+
+{% block content %}
+    <h1>About Us</h1>
+    <p>Welcome to our Expense Tracker application!</p>
+    <p>This application helps you track your expenses efficiently and effectively.</p>
+    <h2>Features:</h2>
+    <ul>
+        <li>Track expenses by category.</li>
+        <li>Add, edit, and delete expense entries.</li>
+        <li>View expense reports and analytics.</li>
+        <li>User-friendly interface.</li>
+    </ul>
+    <p>Our mission is to provide a simple and intuitive tool to help you manage your finances better.</p>
+    <p>For more information or support, feel free to contact us at support@expensetracker.com.</p>
+{% endblock content %}
