--- a/expenses_tracker/expenses_tracker_app/templates/expenses_tracker_app/footer.html
+++ b/expenses_tracker/expenses_tracker_app/templates/expenses_tracker_app/footer.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<footer>
+    <div class="footer-content">
+        <p>&copy; 2024 Expenses Tracker App. All rights reserved.</p>
+        <ul>
+            <li><a href="/about">About Us</a></li>
+            <li><a href="/privacy">Privacy Policy</a></li>
+        </ul>
+    </div>
+</footer>
