--- a/expenses_tracker/expenses_tracker_app/templates/expenses_tracker_app/base.html
+++ b/expenses_tracker/expenses_tracker_app/templates/expenses_tracker_app/base.html
@@ -1,6 +1,36 @@
-<p>
-    <a href="{% url 'expenses_tracker_app:index' %}">Expenses Tracker App </a> -
-    <a href="{% url 'expenses_tracker_app:categories' %}"> Categories </a>
-</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{% block title %}My Website{% endblock %}</title>
+</head>
+<body>
+    <header>
+        <!-- Your header content -->
+        <p>
+            <a href="{% url 'expenses_tracker_app:index' %}">Expenses Tracker App</a> -
+            <a href="{% url 'expenses_tracker_app:categories' %}">Categories</a> -
 
-{% block content %}{% endblock content %}
+            {% if user.is_authenticated %}
+                Hello, {{ user.username }}.
+                <form action="{% url 'users:logout' %}" method="post" style="display:inline;">
+                    {% csrf_token %}
+                    <button type="submit" class="btn btn-link">Log out</button>
+                </form>
+            {% else %}
+                <a href="{% url 'users:register' %}">Register</a>
+                <a href="{% url 'users:login' %}">Log in</a>
+            {% endif %}
+        </p>
+    </header>
+
+    <main>
+        {% block content %}
+        {% endblock %}
+    </main>
+
+    <!-- Include footer -->
+    {% include 'expenses_tracker_app/footer.html' %}
+</body>
+</html>
