--- a/expenses_tracker/expenses_tracker_app/templates/expenses_tracker_app/expenses_list.html
+++ b/expenses_tracker/expenses_tracker_app/templates/expenses_tracker_app/expenses_list.html
@@ -1,10 +1,35 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends "expenses_tracker_app/base.html" %}
+
+{% block content %}
+
+<p><a href="{% url 'expenses_tracker_app:category' category.id %}">{{ category }}</a></p>
+
+<p>Add a new entry:</p>
+<form action="{% url 'expenses_tracker_app:new_entry' category.id %}" method='post'>
+    {% csrf_token %}
+    <!-- Display user and notes fields -->
+    <div>
+        <label for="id_user">User:</label>
+        {{ form.user }}
+    </div>
+    <div>
+        <label for="id_notes">Notes:</label>
+        {{ form.notes }}
+    </div>
+    <!-- Existing fields: amount, category, date -->
+    <div>
+        <label for="id_amount">Amount:</label>
+        {{ form.amount }}
+    </div>
+    <div>
+        <label for="id_category">Category:</label>
+        {{ form.category }}
+    </div>
+    <div>
+        <label for="id_date">Date:</label>
+        {{ form.date }}
+    </div>
+    <button type="submit" name="submit">Add entry</button>
+</form>
+
+{% endblock content %}
