--- a/expenses_tracker/expenses_tracker_app/templates/expenses_tracker_app/new_entry.html
+++ b/expenses_tracker/expenses_tracker_app/templates/expenses_tracker_app/new_entry.html
@@ -1,10 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends "expenses_tracker_app/base.html" %}
+
+{% block content %}
+
+<p><a href="{% url 'expenses_tracker_app:category' category.id %}">{{ category }}</a></p>
+
+<p>Add a new entry:</p>
+<form action="{% url 'expenses_tracker_app:new_entry' category.id %}" method='post'>
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button name='submit'>Add entry</button>
+</form>
+
+{% endblock content %}
