--- a/expenses_tracker/users/templates/registration/logged_out.html
+++ b/expenses_tracker/users/templates/registration/logged_out.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends "expenses_tracker_app/base.html" %}
+
+{% block content %}
+  <p>You have been logged out. Thank you for visiting!</p>
+{% endblock content %}
