--- a/expenses_tracker/users/templates/registration/login.html
+++ b/expenses_tracker/users/templates/registration/login.html
@@ -1,10 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends "expenses_tracker_app/base.html" %}
+
+{% load bootstrap4 %}
+{% bootstrap_css %}
+{% bootstrap_javascript jquery='full' %}
+
+{% block page_header %}
+    <h2>Log in to your account.</h2>
+{% endblock %}
+
+{% block content %}
+    <form method="post" action="{% url 'users:login' %}" class="form">
+        {% csrf_token %}
+        {% bootstrap_form form %}
+        <button type="submit" class="btn btn-primary">Log in</button>
+        <input type="hidden" name="next" value="{% url 'expenses_tracker_app:index' %}" />
+    </form>
+
+    {% if form.errors %}
+        <p>Your username and password didn't match. Please try again.</p>
+    {% endif %}
+{% endblock %}
