--- a/expenses_tracker/users/templates/registration/register.html
+++ b/expenses_tracker/users/templates/registration/register.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends "expenses_tracker_app/base.html" %}
+
+{% block content %}
+
+    <form method="post" action="{% url 'users:register' %}">
+        {% csrf_token %}
+    {{ form.as_p }}
+
+   <button name="submit">Register</button>
+    <input type="hidden" name="next" value="{% url 'expenses_tracker_app:index' %}" />
+</form>
+
+{% endblock content %}
